src/test/ui/kindck/kindck-send-object1.stderr
error[E0277]: `(dyn Dummy + 'a)` cannot be shared between threads safely
  --> $DIR/kindck-send-object1.rs:10:5
   |
LL | fn assert_send<T:Send+'static>() { }
   |                  ---- required by this bound in `assert_send`
...
LL |     assert_send::<&'a dyn Dummy>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `(dyn Dummy + 'a)` cannot be shared between threads safely
   |
   = help: the trait `Sync` is not implemented for `(dyn Dummy + 'a)`
   = note: required because of the requirements on the impl of `Send` for `&'a (dyn Dummy + 'a)`

error[E0477]: the type `&'a (dyn Dummy + Sync + 'a)` does not fulfill the required lifetime
  --> $DIR/kindck-send-object1.rs:14:5
   |
LL |     assert_send::<&'a (dyn Dummy + Sync)>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: type must satisfy the static lifetime

error[E0277]: `(dyn Dummy + 'a)` cannot be sent between threads safely
  --> $DIR/kindck-send-object1.rs:29:5
   |
LL | fn assert_send<T:Send+'static>() { }
   |                  ---- required by this bound in `assert_send`
...
LL |     assert_send::<Box<dyn Dummy + 'a>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `(dyn Dummy + 'a)` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for `(dyn Dummy + 'a)`
   = note: required because of the requirements on the impl of `Send` for `Unique<(dyn Dummy + 'a)>`
   = note: required because it appears within the type `Box<(dyn Dummy + 'a)>`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0477.
For more information about an error, try `rustc --explain E0277`.
